# gTestDummy

./: .gitignore  .gitmodules  CMakeLists.txt
inc/: myclass.hpp  myfunction.hpp
src/: main.cpp  myclass.cpp  myfunction.cpp
test/: test_myclass.cpp  test_myclass_assertion_types.cpp  test_myclass_fixture.cpp  test_myclass_private.cpp  test_myfunction.cpp  test_myfunction_border_analysis.cpp  test_myfunction_equivalence_classes.cpp  test_myfunction_parametrized.cpp
